--- a/ClientApp/app/components/vehicle-form/vehicle-form.component.html
+++ b/ClientApp/app/components/vehicle-form/vehicle-form.component.html
@@ -1,6 +1,6 @@
 <!-- Zen Codeing : form>div.form-group>label+select -->
 
-<h1>New Vehicles Here!</h1>
+<h1>New Vehicles</h1>
 <p>{{ vehicle | json }}</p>
 <form #f="ngForm" (submit)="submit()">
   <div class="form-group">
@@ -35,9 +35,10 @@
   <div *ngFor="let f of features" class="checkbox">
     <label for="feature{{ f.id }}">
       <input type="checkbox" id="feature{{ f.id}}" (change)="onFeatureToggle(f.id, $event)" [checked]="vehicle.features.includes(f.id)"> {{f.name}}
-    </label></div>
+    </label>
+  </div>
 
-    <h2>Contact</h2>
+  <h2>Contact</h2>
     <div class="form-group">
       <label for="contactName">Name</label>
       <input id="contactName" type="text" class="form-control" [(ngModel)]="vehicle.contact.name" name="contactName" required #contactName="ngModel"></div>
@@ -46,11 +47,13 @@
       <label for="contactPhone">Phone</label>
       <input id="contactPhone" type="text" class="form-control"[(ngModel)]="vehicle.contact.phone" name="contactPhone" required #contactPhone="ngModel"></div>
       <div class="alert alert-danger" *ngIf="contactPhone.touched && !contactPhone.valid">Please specify the Contact No.</div>
-     <div class="form-group">
+    <div class="form-group">
       <label for="contactEmail">Email</label>
       <input id="contactEmail" type="text" class="form-control"[(ngModel)]="vehicle.contact.email" name="contactEmail" required #contactEmail="ngModel"></div>
       <div class="alert alert-danger" *ngIf="contactEmail.touched && !contactEmail.valid">Please specify the Contact Email.</div>
-      <button class="btn btn-primary" [disabled]="!f.valid">Save</button>
-      <button *ngIf="vehicle.id" class="btn btn-danger" type="button" (click)="delete()">Delete</button>
+      
+    <button class="btn btn-primary" [disabled]="!f.valid">Save</button> 
+    
+  <button *ngIf="vehicle.id" class="btn btn-danger" type="button" (click)="delete()">Delete</button>
 </form>
 
