Add Customer Support

--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -24,7 +24,7 @@
                 </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
                         <a [routerLink]="['/planningapps/new']">
-                            <span class='glyphicon glyphicon-list-alt'></span> New Planning Application
+                            <span class='glyphicon glyphicon-plus'></span> New Planning Application
                         </a>
                     </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
