--- a/ClientApp/app/components/planningapp-form/planningapp-form.component.html
+++ b/ClientApp/app/components/planningapp-form/planningapp-form.component.html
@@ -4,6 +4,7 @@
 <ul class="nav nav-tabs" role="tablist">
   <li role="presentation" class="active"><a href="#basic" aria-controls="basic" role="tab" data-toggle="tab">Application Details</a></li>
   <li role="presentation"><a href="#states" aria-controls="states" role="tab" data-toggle="tab">Application States</a></li>
+  <li role="presentation"><a href="#customer" aria-controls="customer" role="tab" data-toggle="tab">Customer Details</a></li>
   <li role="presentation"><a href="#photos" aria-controls="photos" role="tab" data-toggle="tab">Drawings</a></li>
 </ul>
 
@@ -12,46 +13,84 @@
   <!-- Planning tab -->
   <div role="tabpanel" class="tab-pane active" id="basic">
     <div class="well">
-      <form #f1="ngForm" (submit)="submit()">
-          <div class="form-group">
-              <label for="planningStatus">Application Status</label>
-              <input id="planningStatus" type="text" class="form-control" [(ngModel)]="planningApp.planningStatus" name="planningStatus"></div>
-        
-          <div class="form-group">
-            <label for="completionDate">Application Estimated Completion Date</label>
-            <input id="completionDate" type="text" class="form-control" [(ngModel)]="planningApp.completionDate" name="completionDate"></div>
-      </form>
-
-      <form #f="ngForm" (submit)="submit()">
+      <form class="form-horizontal" #f1="ngForm" (submit)="submit()">
         <div class="form-group">
-          <label for="name">Description</label>
-          <input id="name" type="text" class="form-control" [(ngModel)]="planningApp.name" name="name" required #applicationName="ngModel"></div>
-          <div class="alert alert-danger" *ngIf="applicationName.touched && !applicationName.valid">Please enter a description.</div>
+          <label class="control-label col-sm-2" for="planningStatus">Status</label>
+          <div class="col-sm-3">
+            <input id="planningStatus" type="text" class="form-control" [(ngModel)]="planningApp.planningStatus" name="planningStatus">
+          </div>
+          <div class="col-sm-7">
+          </div>
+        </div> 
 
         <div class="form-group">
-          <label for="currentStateStatus">Current Status</label>
-          <input id="currentStateStatus" type="text" class="form-control" [(ngModel)]="planningApp.currentStateStatus" name="currentStateStatus"></div>
+          <label class="control-label col-sm-2" for="planningStatus">Completion Date</label>
+          <div class="col-sm-3">
+            <input id="completionDate" type="text"  class="form-control" [(ngModel)]="planningApp.completionDate" name="completionDate">
+          </div>
+          <div class="col-sm-7">
+          </div>
+        </div> 
 
         <div class="form-group">
-          <label for="currentState">Current State</label>
-          <input id="currentState" type="text" class="form-control" [(ngModel)]="planningApp.currentState" name="currentState"></div>
-      
-        <div class="form-group">
-          <label for="expectedStateCompletionDate">Expected Completion Date</label>
-          <input id="expectedStateCompletionDate" type="text" class="form-control" [(ngModel)]="planningApp.expectedStateCompletionDate" name="expectedStateCompletionDate"></div>
-      
+          <label class="control-label col-sm-2" for="planningStatus">Description</label>
+          <div class="col-sm-6">
+            <input id="applicationName" type="text"  class="form-control" [(ngModel)]="planningApp.applicationName" name="applicationName">
+          </div>
+          <div class="col-sm-4">
+          </div>
+        </div> 
 
         <div class="form-group">
-          <label for="nextState">Next State</label>
-          <input id="nextState" type="text" class="form-control" [(ngModel)]="planningApp.nextState" name="nextState">
-        </div>
+          <label class="control-label col-sm-2" for="planningStatus">Current Status</label>
+          <div class="col-sm-3">
+            <input id="currentStateStatus" type="text" class="form-control" [(ngModel)]="planningApp.currentStateStatus" name="currentStateStatus">
+          </div>
+          <div class="col-sm-7">
+          </div>
+        </div> 
 
-        <button class="btn btn-primary" [disabled]="!f.valid">Next State</button>
-        <!-- <button *ngIf="vehicle.id" class="btn btn-danger" type="button" (click)="delete()">Delete</button> -->
+        <div class="form-group">
+          <label class="control-label col-sm-2" for="planningStatus">Current State</label>
+          <div class="col-sm-3">
+            <input id="currentState" type="text"  class="form-control" [(ngModel)]="planningApp.currentState" name="currentState">
+          </div>
+          <div class="col-sm-7">
+          </div>
+        </div> 
+
+        <div class="form-group">
+          <label class="control-label col-sm-2" for="planningStatus">Due By</label>
+          <div class="col-sm-3">
+            <input id="expectedStateCompletionDate" type="text" class="form-control" [(ngModel)]="planningApp.expectedStateCompletionDate" name="expectedStateCompletionDate">
+          </div>
+          <div class="col-sm-7">
+          </div>
+        </div>  
+
+        <div class="form-group">
+          <label class="control-label col-sm-2" for="planningStatus">Next State</label>
+          <div class="col-sm-3">
+            <input id="nextState" type="text" class="form-control" [(ngModel)]="planningApp.nextState" name="nextState">
+          </div>
+          <div class="col-sm-7">
+          </div>
+        </div> 
+
+        <div class="form-group">
+            <label class="control-label col-sm-2"></label>
+            <div class="col-sm-3">
+                <button class="btn btn-primary" >Next State</button>          
+           </div>
+            <div class="col-sm-7">
+            </div>
+          </div> 
+
+
       </form>
     </div>
   </div>
-  <!-- Photos tab -->
+  <!-- State table -->
   <div role="tabpanel" class="tab-pane" id="states">
     <head>
         <style>
@@ -64,42 +103,106 @@
             text-align: left;
             padding: 4px;
         } 
-        tr:nth-child(even) {background-color: #e9e9e9;}
+        /* tr:nth-child(even) {background-color: #e9e9e9;} */
+
+          .highlight{
+            background: rgb(143, 192, 192); /* green */
+            } 
       </style>
     </head>
     
     <h3>Planning Application States</h3>
     <div class="well">
-    <table class="table">
+    <table class="table">   
       <thead>
         <tr>
           <th>State Name</th>
           <th>Due By Date</th>
           <th>Date Completed</th>
           <th>State Status</th>
-          <th>CurrentState</th>
         </tr>
       </thead>
-      <!-- <tr *ngFor="let r of queryResult.items">
-        <td>{{ r.id }}</td>
-        <td>
-          <a [routerLink]="['/vehicles/', v.id]">View</a>
-        </td>
-      </tr> -->
-      <tr *ngFor="let v of planningApp.planningAppStates">
+      <tr *ngFor="let v of planningApp.planningAppStates" [ngClass] = "{'highlight' : v.currentState == true}">
           <td>{{ v.stateName}}</td>
           <td>{{ v.dueByDate }}</td>
           <td>{{ v.dateCompleted }}</td>
           <td>{{ v.stateStatus }}</td>
-          <td>{{ v.currentState }}</td>
-          <td>
+          <!-- <td>
             <a [routerLink]="['/planningapps/', v.id]">View</a>
-          </td>
+          </td> -->
         </tr>
       </tbody>
       <div></div>
     </table>
   </div>
+  </div>
+  <!-- Customer tab -->
+  <div role="tabpanel" class="tab-pane" id="customer">
+      <div class="well">
+          <form class="form-horizontal">
+
+                <div class="form-group">
+                    <label class="control-label col-sm-1" for="firstName">First Name</label>
+                    <div class="col-sm-3">
+                      <input id="firstName" type="text" disabled="disabled" class="form-control" [(ngModel)]="planningApp.customer.firstName" name="firstName">
+                    </div>
+                    <div class="col-sm-8">
+                    </div>
+                  </div>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-1" for="address1">Address1</label>
+                    <div class="col-sm-6">
+                      <input id="address1" type="text" disabled="disabled" class="form-control" [(ngModel)]="planningApp.customer.address1" name="address1">
+                    </div>
+                    <div class="col-sm-5">
+                    </div>
+                  </div>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-1" for="address1">Address2</label>
+                    <div class="col-sm-6">
+                      <input id="address2" type="text" disabled="disabled" class="form-control" [(ngModel)]="planningApp.customer.address2" name="address2">
+                    </div>
+                    <div class="col-sm-5">
+                    </div>
+                  </div>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-1" for="address1">Postcode</label>
+                    <div class="col-sm-2">
+                      <input id="postcode" type="text" disabled="disabled" class="form-control" [(ngModel)]="planningApp.customer.postcode" name="postcode">
+                    </div>
+                    <div class="col-sm-9">
+                    </div>
+                </div>  
+
+                <div class="form-group">
+                    <label class="control-label col-sm-1" for="address1">Email</label>
+                    <div class="col-sm-3">
+                      <input id="emailAddress" type="text" disabled="disabled" class="form-control" [(ngModel)]="planningApp.customer.emailAddress" name="emailAddress">
+                    </div>
+                    <div class="col-sm-8">
+                    </div>
+                </div>     
+                <div class="form-group">
+                    <label class="control-label col-sm-1" for="telephoneHome">Home No</label>
+                    <div class="col-sm-3">
+                      <input id="telephoneHome" type="text" disabled="disabled" class="form-control" [(ngModel)]="planningApp.customer.telephoneHome" name="telephoneHome">
+                    </div>
+                    <div class="col-sm-8">
+                    </div>
+                </div>   
+                <div class="form-group">
+                    <label class="control-label col-sm-1" for="telephoneMobile">Mobile No</label>
+                    <div class="col-sm-3">
+                      <input id="telephoneMobile" type="text" disabled="disabled" class="form-control" [(ngModel)]="planningApp.customer.telephoneMobile" name="telephoneMobile">
+                    </div>
+                    <div class="col-sm-8">
+                    </div>
+                </div>      
+            </form>
+      </div>
   </div>
   <!-- Drawings tab -->
   <div role="tabpanel" class="tab-pane" id="photos">
