--- a/ClientApp/app/components/planningapp-new/planningapp-new.component.html
+++ b/ClientApp/app/components/planningapp-new/planningapp-new.component.html
@@ -1,29 +1,31 @@
 <h1>New Planning Application</h1>
 
 <form #f="ngForm" (submit)="submit()">
-  <div class="form-group">
-    <label for="customer">Select Customer</label>
-    <select id="customer" class="form-control" [(ngModel)]="planningAppGenerator.customerId" name = "customer" required #customer="ngModel">
-      <option value=""></option>
-      <option *ngFor="let m of customerSelect" value="{{m.id}}">{{ m.customerNameLong }}</option>
-    </select>
-    <div class="alert alert-danger" *ngIf="customer.touched && !customer.valid">Please specify customer.</div>
-  </div>
+  <div class="well">
+    <div class="form-group">
+      <label for="customer">Select Customer</label>
+      <select id="customer" class="form-control" [(ngModel)]="planningAppGenerator.customerId" name = "customer" required #customer="ngModel">
+        <option value=""></option>
+        <option *ngFor="let m of customerSelect" value="{{m.id}}">{{ m.customerNameLong }}</option>
+      </select>
+      <div class="alert alert-danger" *ngIf="customer.touched && !customer.valid">Please specify customer.</div>
+    </div>
 
-  <!-- <button class="btn btn-primary" [disabled]="!f.valid">Save</button> -->
-  <div class="form-group">
-    <label for="generator">State Generator</label>
-    <select id="stateGenerator" class="form-control" (change)="onGeneratorChange()" [(ngModel)]="planningAppGenerator.stateInitialiserId" name="stateGeneratorId" required #stateGenerator="ngModel">
-      <option value=""></option>
-      <option *ngFor="let m of stateGeneratorSelect" value="{{ m.id }}">{{ m.name }}</option>
-    </select>
-    <div class="alert alert-danger" *ngIf="stateGenerator.touched && !stateGenerator.valid">Please specify Generator.</div>  
-  </div>
+    <!-- <button class="btn btn-primary" [disabled]="!f.valid">Save</button> -->
+    <div class="form-group">
+      <label for="generator">State Generator</label>
+      <select id="stateGenerator" class="form-control" (change)="onGeneratorChange()" [(ngModel)]="planningAppGenerator.stateInitialiserId" name="stateGeneratorId" required #stateGenerator="ngModel">
+        <option value=""></option>
+        <option *ngFor="let m of stateGeneratorSelect" value="{{ m.id }}">{{ m.name }}</option>
+      </select>
+      <div class="alert alert-danger" *ngIf="stateGenerator.touched && !stateGenerator.valid">Please specify Generator.</div>  
+    </div>
 
-  <div class="form-group">
-      <label for="description">Description</label>
-      <input id="description" type="text" class="form-control" [(ngModel)]="planningAppGenerator.name" name="description" required #description="ngModel">
+    <div class="form-group">
+        <label for="description">Description</label>
+        <input id="description" type="text" class="form-control" [(ngModel)]="planningAppGenerator.name" name="description" required #description="ngModel">
+    </div>
+    <div class="alert alert-danger" *ngIf="description.touched && !description.valid">Please enter a description.</div>
+    <button class="btn btn-primary" [disabled]="!f.valid">Save</button>
   </div>
-  <div class="alert alert-danger" *ngIf="description.touched && !description.valid">Please enter a description.</div>
-  <button class="btn btn-primary" [disabled]="!f.valid">Save</button>
 </form>
