Application Description Not Showimg

--- a/ClientApp/app/components/planningapp-form/planningapp-form.component.html
+++ b/ClientApp/app/components/planningapp-form/planningapp-form.component.html
@@ -91,7 +91,7 @@
         <div class="form-group">
           <label class="control-label col-sm-2" for="planningStatus">Description</label>
           <div class="col-sm-6">
-            <input id="applicationName" type="text"  class="form-control" [(ngModel)]="planningApp.applicationName" name="applicationName">
+            <input id="applicationName" type="text"  class="form-control" [(ngModel)]="planningApp.name" name="applicationName">
           </div>
             <div class="col-sm-4">
           </div>
@@ -125,7 +125,7 @@
         </div>  
   
         <div class="form-group">
-          <label class="control-label col-sm-2" for="planningStatus">Complete</label>
+          <label class="control-label col-sm-2" for="planningStatus">Next State</label>
           <div class="col-sm-3">
             <input id="nextState" type="text" class="form-control" [(ngModel)]="planningApp.nextState" name="nextState">
           </div>
