--- a/ClientApp/app/components/planningapp-form/planningapp-form.component.html
+++ b/ClientApp/app/components/planningapp-form/planningapp-form.component.html
@@ -33,10 +33,21 @@
     </head>
     
     <h3>Planning Application States</h3>
+    <form class="form-horizontal" #f="ngForm" (submit)="submit()">
+      <div class="form-group">
+          <label class="control-label col-sm-11"></label>
+          <div class="col-sm-1">
+              <button class="btn btn-primary" >Complete</button>          
+          </div>
+            <div class="col-sm-1">
+          </div>
+        </div> 
+  </form>
     <div class="well">
     <table class="table">   
       <thead>
         <tr>
+          <th>Id></th>
           <th>State Name</th>
           <th>Due By Date</th>
           <th>Date Completed</th>
@@ -44,7 +55,8 @@
         </tr>
       </thead>
       <tr *ngFor="let v of planningApp.planningAppStates" [ngClass] = "{'highlight' : v.currentState == true}">
-          <td>{{ v.stateName}}</td>
+          <td>{{ v.id}}</td>
+        <td>{{ v.stateName}}</td>
           <td>{{ v.dueByDate }}</td>
           <td>{{ v.dateCompleted }}</td>
           <td>{{ v.stateStatus }}</td>
@@ -56,7 +68,7 @@
     </table>
     <form class="form-horizontal" #f="ngForm" (submit)="submit()">
         <div class="form-group">
-            <label class="control-label col-sm-10"></label>
+            <label class="control-label col-sm-11"></label>
             <div class="col-sm-1">
                 <button class="btn btn-primary" >Complete</button>          
             </div>
