--- a/ClientApp/app/components/planningapp-list/planningapp-list.component.html
+++ b/ClientApp/app/components/planningapp-list/planningapp-list.component.html
@@ -1,4 +1,4 @@
-<h2>Planning Applications</h2>
+<h2>Applications In Progress</h2>
 <p>
   <a [routerLink]="['/planningapps/new']" class="btn btn-primary">New Planning App</a>
 </p>
