--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -19,7 +19,7 @@
                 </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
                     <a [routerLink]="['/planningapps']">
-                        <span class='glyphicon glyphicon-list-alt'></span> Planning Applications
+                        <span class='glyphicon glyphicon-list-alt'></span> Applications In Progress
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
@@ -37,6 +37,11 @@
                         <span class='glyphicon glyphicon-plus'></span> Add Customer
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
+                        <a [routerLink]="['/planningapps']">
+                            <span class='glyphicon glyphicon-list-alt'></span> All Applications
+                        </a>
+                    </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
                         <a [routerLink]="['/stateinitialisers']">
                             <span class='glyphicon glyphicon-home'></span> State Initialisers
