--- a/ClientApp/app/components/planningapp-list/planningapp-list.component.html
+++ b/ClientApp/app/components/planningapp-list/planningapp-list.component.html
@@ -4,15 +4,20 @@
 </p>
 
 <div class="well">
-  <div class="form-group">
-    <label for="Planning Status">Planning Status</label>
-    <select id="planningStatus" class="form-control" [(ngModel)]="query.makeId" (change)="onFilterChange()">
-      <option value=""></option>
-      <option *ngFor="let m of statuses" value="{{ m.id }}">{{ m.name }}</option>
-    </select>  
-  </div>
+
+    <!-- <div class="col-sm-2"> -->
+        <div class="form-group">
+          <label for="Planning Status">Planning Status</label>
+          <select id="planningStatus" class="form-control" [(ngModel)]="query.stateStatus" (change)="onStateFilterChange()">
+            <option value=""></option>
+            <option *ngFor="let m of stateStatuses" value="{{ m.id }}">{{ m.name }}</option>
+          </select>  
+        </div>
+  <!-- </div> -->
+  <!-- <div class="col-sm-10">
+    </div> -->
 </div>
-  
+
 <head>
   <style>
   table {
