--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -44,7 +44,7 @@
                     </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
                         <a [routerLink]="['/stateinitialisers']">
-                            <span class='glyphicon glyphicon-home'></span> State Initialisers
+                            <span class='glyphicon glyphicon-home'></span> State Generators
                         </a>
                     </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
