--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
-                        <a [routerLink]="['/planningapps']">
+                        <a [routerLink]="['/planningapps/all']">
                             <span class='glyphicon glyphicon-list-alt'></span> All Applications
                         </a>
                     </li>
