--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -38,6 +38,11 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
+                    <a [routerLink]="['/planningapps/enquiry']">
+                        <span class='glyphicon glyphicon-list-alt'></span>Web Planning Enquiries
+                    </a>
+                </li>
+                <li [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{exact: true}">
                         <a [routerLink]="['/planningapps/all']">
                             <span class='glyphicon glyphicon-list-alt'></span> All Applications
                         </a>
