--- a/ClientApp/app/components/planningapp-form/planningapp-form.component.html
+++ b/ClientApp/app/components/planningapp-form/planningapp-form.component.html
@@ -1,5 +1,21 @@
 <h1>Planning Application : {{ planningApp.id }}</h1>
 
+<!-- <style>
+    input[type="text"], textarea {
+        background-color : #e20b0b; 
+  }
+  </style> -->
+
+<form class="form-horizontal" *ngIf="planningApp.planningStatus=='Terminated'">
+<div class="form-group">
+      <div class="col-sm-2">
+        <input id="planningStatus"  style="background:red"  type="text" disabled="disabled" class="form-control" [(ngModel)]="planningApp.planningStatus" name="planningStatus">
+      </div>
+      <div class="col-sm-10">
+      </div>
+    </div>
+</form>
+
 <!-- Nav tabs -->
 <ul class="nav nav-tabs" role="tablist">
   <li role="presentation" class="active"><a href="#states" aria-controls="states" role="tab" data-toggle="tab">Application States</a></li>
@@ -24,8 +40,6 @@
             text-align: left;
             padding: 4px;
         } 
-        /* tr:nth-child(even) {background-color: #e9e9e9;} */
-
           .highlight{
             background: rgb(143, 192, 192); /* green */
             } 
@@ -33,21 +47,27 @@
     </head>
     
     <h3>Planning Application States</h3>
+    <!-- <mat-radio-group>
+      <mat-radio-button value="1">Option 1</mat-radio-button>
+      <mat-radio-button value="2">Option 2</mat-radio-button>
+    </mat-radio-group> -->
 
     <div class="well">
-        <!-- <form class="form-horizontal" #f="ngForm" (submit)="submit()">
+        <form class="form-horizontal">
             <div class="form-group">
-                <label class="control-label col-sm-11"></label>
-                <div class="col-sm-1">
-                    <button class="btn btn-primary" >Complete</button>          
-                </div>
-                  <div class="col-sm-1">
-                </div>
-              </div> 
-        </form> -->
+              <label class="control-label col-sm-1" for="planningStatus">Generator</label>
+              <div class="col-sm-3">
+                <input id="generator" type="text" disabled="disabled" style="background:lavender" class="form-control" [(ngModel)]="planningApp.generator" name="generator">
+              </div>
+                <div class="col-sm-8">
+              </div>
+            </div> 
+        </form>
         <label class="control-label col-sm-11"></label>
         <div class="col-sm-1">
           <button  *ngIf="planningApp.planningStatus=='Complete'" class="btn btn-success" type="button" (click)="archive()">Archive</button>          
+          <button  *ngIf="planningApp.planningStatus=='Terminated'" class="btn btn-success" type="button" (click)="archive()">Archive</button>          
+          <button  *ngIf="planningApp.planningStatus=='InProgress'" class="btn btn-warning" type="button" (click)="terminate()">Terminate</button>          
         </div>
           <div class="col-sm-1">
         </div>
@@ -72,12 +92,16 @@
         </tr>
       </tbody>
     </table>
-    <label class="control-label col-sm-11"></label>
-    <div class="col-sm-1">
-      <button  *ngIf="planningApp.planningStatus!='Complete'" class="btn btn-success" type="button" (click)="archive()">Complete</button>          
-    </div>
-      <div class="col-sm-1">
-    </div>
+    <form class="form-horizontal" #f="ngForm">
+        <div class="form-group">
+            <label class="control-label col-sm-11"></label>
+            <div class="col-sm-1">
+                <button  *ngIf="planningApp.planningStatus=='InProgress'" class="btn btn-primary" type="button" (click)="submit()">Complete</button>               
+             </div>
+              <div class="col-sm-1">
+            </div>
+        </div> 
+    </form>
   </div>
   </div>
 
