--- a/ClientApp/app/components/planningapp-form/planningapp-form.component.html
+++ b/ClientApp/app/components/planningapp-form/planningapp-form.component.html
@@ -47,10 +47,6 @@
     </head>
     
     <h3>Planning Application States</h3>
-    <!-- <mat-radio-group>
-      <mat-radio-button value="1">Option 1</mat-radio-button>
-      <mat-radio-button value="2">Option 2</mat-radio-button>
-    </mat-radio-group> -->
 
     <div class="well">
         <form class="form-horizontal">
@@ -86,9 +82,9 @@
           <td>{{ v.dueByDate }}</td>
           <td>{{ v.dateCompleted }}</td>
           <td>{{ v.stateStatus }}</td>
-          <!-- <td>
-            <a [routerLink]="['/planningapps/', v.id]">View</a>
-          </td> -->
+          <td>
+            <a *ngIf="v.currentState == true" [routerLink]="['/planningapps/', v.id]">Edit</a>
+          </td>
         </tr>
       </tbody>
     </table>
