Allow user to customer change DueByDate

--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -38,7 +38,7 @@
 
       <div>
         <div class="card">
-          <pre class="card-block card-header">Selected date is: <em *ngIf="dt">{{ getDate() | date:'fullDate'}}</em></pre>
+          <pre class="card-block card-header">Selected date is: <em *ngIf="dt">{{ getDate() | date:'dd-MM-yyyy'}}</em></pre>
         </div>
         <h4>Inline</h4>
         <div style="display:inline-block; min-height:290px;">
